# sim_disease

./: .gitignore  README.md  main.py  pyproject.toml
configs/exp1_foundations/: High Density, Medium Initial.json  Low Density, Low Initial.json  Medium Density, High Initial.json  README.md
configs/exp2_heterogeneity/: README.md  exp2_high_avg_defense_low_variance.json  exp2_low_avg_defense_low_variance.json  exp2_medium_avg_defense_high_variance.json
configs/exp3_core_mechanisms/: README.md  exp3_model_dependent_moderate.json  exp3_model_independent_baseline.json  exp3_model_superspreader_baseline.json
configs/exp4_superspreader_phenomenon/: README.md  exp4_superspreader_baseline.json  exp4_superspreader_high_chance_high_impact.json  exp4_superspreader_low_chance_high_impact.json  exp4_superspreader_low_chance_low_impact.json
configs/exp5_model_showdown/: README.md  exp5_compare_dependent.json  exp5_compare_independent.json  exp5_compare_superspreader.json
configs/exp6_network_topology/: README.md  expA_barabasi_albert.json  expA_erdos_renyi.json  expA_watts_strogatz.json
report/: .report.tex.swp  report.aux  report.out  report.tex  report.toc
results/exp1_foundations/: summary_metrics.csv
results/exp2_heterogeneity/: summary_metrics.csv
results/exp3_core_mechanisms/: summary_metrics.csv
results/exp4_superspreader_phenomenon/: summary_metrics.csv
results/exp5_model_showdown/: summary_metrics.csv
results/exp6_network_topology/: summary_metrics.csv
src/: config.py  graph_setup.py  plotting.py  simulation.py
src/models/: dependent.py  (+2 more)
(+5 files in other folders)
