[project]
name = "sim_disease"
version = "0.1.0"
description = "Simulation of infectious disease spread on a network."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT" # Or choose another license

# Add authors if desired
# authors = [
#     {name = "Your Name", email = "you@example.com"},
# ]

dependencies = [
    "networkx>=3.0",
    "numpy>=1.20",
    "matplotlib>=3.5",
    "seaborn>=0.12",
    "pandas>=1.3", # Adding pandas as it's used in plotting.py but was missing
    "jsonschema>=4.0",
    "pydantic>=2.11.4",
]

[project.scripts]
run_simulation = "sim_disease.main:main" # Example if main.py has a main() function

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
